test/parse/assert/bad-invoke-too-few.txt
;;; ERROR: 1
;;; FLAGS: --spec
(module
  (func (param i32))
  (export "foo" (func 0)))
(invoke "foo")
(;; STDERR ;;;
out/test/parse/assert/bad-invoke-too-few.txt:6:2: error: too few parameters to function. got 0, expected 1
(invoke "foo")
 ^^^^^^
;;; STDERR ;;)
